# argman

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: tests.yml
docs/: 01-basic.md  02-customization.md
src/argman/: __init__.py  argman.py
tests/: test_argman_optional.py  test_argman_positional.py  test_custom_argv.py  test_special_features.py  test_subcommands.py
