[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argman"
version = "0.3.6"
description = "A lightweight argument manager for Python CLI tools"
authors = [{ name = "Seyed Mohammad Javad Taghipoor", email = "smjavadt.1379@gmail.com"}]
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["cli", "argparse", "arguments", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smjt2000/argman"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
